--- a/methodbox/public/stylesheets/main_layout_extras.css
+++ b/methodbox/public/stylesheets/main_layout_extras.css
@@ -64,6 +64,9 @@ text-decoration: underline;
 .asset_resource_avatars {
 	text-align: centre;
 }
+.help_image {
+	vertical-align: top;
+}
 
 
 
